syntax = "proto3";

package onion_routing;

option go_package = "DS-Project-Onion-Routing/protofiles";

service TestService {
    rpc TestRPC (DummyRequest) returns (DummyResponse);
    rpc Test1RPC (DummyRequest) returns (DummyResponse);
    rpc Test2RPC (DummyRequest) returns (DummyResponse);
}

service RelayNodeServer {
    rpc RelayNodeRPC(DummyRequest) returns (DummyResponse);
}

message DummyRequest {
    bytes message = 1;
}

message DummyResponse {
    bytes reply = 1;
}
